assignment6/log/build_2026-03-31_12-52-56/relbot_sequence_controller/stderr.log
/home/jordan/SDfR/assignment6/src/relbot_sequence_controller/src/relbot_sequence_controller.cpp: In member function ‘void SteerRelbot::calculate_velocity()’:
/home/jordan/SDfR/assignment6/src/relbot_sequence_controller/src/relbot_sequence_controller.cpp:60:5: error: ‘center_x’ was not declared in this scope
   60 |     center_x = 150.0;
      |     ^~~~~~~~
/home/jordan/SDfR/assignment6/src/relbot_sequence_controller/src/relbot_sequence_controller.cpp:61:5: error: ‘center_y’ was not declared in this scope
   61 |     center_y = 100.0;
      |     ^~~~~~~~
gmake[2]: *** [CMakeFiles/relbot_sequence_controller.dir/build.make:76: CMakeFiles/relbot_sequence_controller.dir/src/relbot_sequence_controller.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/relbot_sequence_controller.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
